[gd_scene load_steps=5 format=3 uid="uid://dxtsd76mfiwdo"]

[ext_resource type="Script" path="res://example/example_scene.gd" id="1_3c5os"]
[ext_resource type="Script" path="res://addons/virtual_camera_2d/scripts/virtual_camera_2d.gd" id="1_clpnm"]
[ext_resource type="Script" path="res://addons/virtual_camera_2d/scripts/cinematic_camera_2d.gd" id="2_j4hdc"]
[ext_resource type="Texture2D" uid="uid://cvgcw4i6fw2kc" path="res://icon.svg" id="3_5tcj5"]

[node name="ExampleScene" type="Node2D"]
script = ExtResource("1_3c5os")

[node name="VirtualCamera1" type="Node2D" parent="."]
z_index = 99
script = ExtResource("1_clpnm")
limit_left = 0
limit_top = 0
limit_right = 1112
limit_bottom = 1112

[node name="Sprite2D" type="Sprite2D" parent="VirtualCamera1"]
scale = Vector2(8.6875, 8.6875)
texture = ExtResource("3_5tcj5")
centered = false

[node name="VirtualCamera2" type="Node2D" parent="."]
z_index = 99
position = Vector2(1112, 0)
script = ExtResource("1_clpnm")
offset = Vector2(0, -128)
zoom = Vector2(0.9, 0.9)
limit_left = 0
limit_top = 0
limit_right = 1112
limit_bottom = 1112

[node name="Sprite2D" type="Sprite2D" parent="VirtualCamera2"]
scale = Vector2(8.6875, 8.6875)
texture = ExtResource("3_5tcj5")
centered = false

[node name="CinematicCamera" type="Camera2D" parent="." node_paths=PackedStringArray("follow_node", "virtual_camera")]
z_index = 100
position = Vector2(456, 248)
position_smoothing_enabled = true
script = ExtResource("2_j4hdc")
follow_node = NodePath("../Player")
virtual_camera = NodePath("../VirtualCamera1")
transition_speed = 100.0

[node name="Player" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(456, 248)
texture = ExtResource("3_5tcj5")
